docker/k8s/front-ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: front-ingress-service
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: "200m"
  
spec: 
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: front-cluster-ip-service
                port:
                  number: 3000
